[metadata]
name = rwin
version = 1.0.1
author = Melqui Brito
author_email = melquibrito07@gmail.com
description = This package provides a class with handy methods for running windows commands, executing powershell scripts, managing services, managing processes and getting information on windows remote servers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/melquibrito/remote-windows-server
project_urls =
    Bug Tracker = https://github.com/melquibrito/remote-windows-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = remote, windows
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src